# qmetacc

./: CMakeLists.txt  CTestTestfile.cmake  README.md  cbordevice.h  cmake_install.cmake  collectjson.cpp  collectjson.h  depfile_shared.h  generator.cpp  main.cpp  moc.cpp  moc.h  moc_longpath.manifest  moc_longpath.rc  moc_resource.rc  preprocessor.cpp  preprocessor.h  symbols.h  token.h  utils.h
util/: generate_keywords.cpp
